<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/themecolor"
    tools:context=".AddVideo">

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:id="@+id/video_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/enter_video_name"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/choose_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_view"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/choose_video"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:background="@color/themecolor"
        android:onClick="Choosevideo"
        android:paddingVertical="15dp"
        android:text="@string/choose_video"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_view" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/themecolor"
        android:onClick="UploadVideo"
        android:paddingVertical="15dp"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_video"
        app:layout_constraintVertical_bias="0.144" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_button"
        app:layout_constraintVertical_bias="0.191"
        android:layout_margin="10dp"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>